set(SRCS_FANOUT_TEST ${CMAKE_CURRENT_LIST_DIR}/fanout_test.cc)

add_executable(fanout_test ${SRCS_FANOUT_TEST})
target_include_directories(fanout_test PUBLIC ${CMAKE_CURRENT_LIST_DIR})
target_link_libraries(fanout_test PUBLIC index_schema_cc_proto)
target_link_libraries(fanout_test PUBLIC valkey_search)
target_link_libraries(fanout_test PUBLIC coordinator_cc_proto)
target_link_libraries(fanout_test PUBLIC search_converter)
target_link_libraries(fanout_test PUBLIC util)
target_link_libraries(fanout_test PUBLIC numeric)
target_link_libraries(fanout_test PUBLIC tag)
target_link_libraries(fanout_test PUBLIC fanout)
target_link_libraries(fanout_test PUBLIC testing_common)
target_link_libraries(fanout_test PUBLIC coordinator_common)
target_link_libraries(fanout_test PUBLIC module)
target_link_libraries(fanout_test PUBLIC utils)
target_link_libraries(fanout_test PUBLIC valkey_module)
finalize_test_flags(fanout_test)

set(SRCS_RESPONSE_GENERATOR_TEST
    ${CMAKE_CURRENT_LIST_DIR}/response_generator_test.cc)

add_executable(response_generator_test ${SRCS_RESPONSE_GENERATOR_TEST})
target_include_directories(response_generator_test
                           PUBLIC ${CMAKE_CURRENT_LIST_DIR})
target_link_libraries(response_generator_test PUBLIC attribute_data_type)
target_link_libraries(response_generator_test PUBLIC vector_base)
target_link_libraries(response_generator_test PUBLIC predicate)
target_link_libraries(response_generator_test PUBLIC response_generator)
target_link_libraries(response_generator_test PUBLIC search)
target_link_libraries(response_generator_test PUBLIC string_interning)
target_link_libraries(response_generator_test PUBLIC testing_common)
target_link_libraries(response_generator_test PUBLIC managed_pointers)
target_link_libraries(response_generator_test PUBLIC type_conversions)
target_link_libraries(response_generator_test PUBLIC module)
target_link_libraries(response_generator_test PUBLIC utils)
target_link_libraries(response_generator_test PUBLIC valkey_module)
finalize_test_flags(response_generator_test)
