set(SRCS_COMMAND_PARSER_TEST ${CMAKE_CURRENT_LIST_DIR}/command_parser_test.cc)
add_executable(command_parser_test ${SRCS_COMMAND_PARSER_TEST})
target_include_directories(command_parser_test PUBLIC ${CMAKE_CURRENT_LIST_DIR})
target_link_libraries(command_parser_test PUBLIC command_parser)
target_link_libraries(command_parser_test PUBLIC status_macros)
target_link_libraries(command_parser_test PUBLIC module)
target_link_libraries(command_parser_test PUBLIC utils)
target_link_libraries(command_parser_test PUBLIC valkey_module)
target_link_libraries(command_parser_test PUBLIC vmsdk_testing_infra)
finalize_test_flags(command_parser_test)

set(SRCS_CONCURRENCY_TEST ${CMAKE_CURRENT_LIST_DIR}/concurrency_test.cc)
add_executable(concurrency_test ${SRCS_CONCURRENCY_TEST})
target_include_directories(concurrency_test PUBLIC ${CMAKE_CURRENT_LIST_DIR})
target_link_libraries(concurrency_test PUBLIC concurrency)
target_link_libraries(concurrency_test PUBLIC log)
target_link_libraries(concurrency_test PUBLIC vmsdk_testing_infra)
finalize_test_flags(concurrency_test)

set(SRCS_MODULE_TYPE_TEST ${CMAKE_CURRENT_LIST_DIR}/module_type_test.cc)
add_executable(module_type_test ${SRCS_MODULE_TYPE_TEST})
target_include_directories(module_type_test PUBLIC ${CMAKE_CURRENT_LIST_DIR})
target_link_libraries(module_type_test PUBLIC module_type)
target_link_libraries(module_type_test PUBLIC module)
target_link_libraries(module_type_test PUBLIC utils)
target_link_libraries(module_type_test PUBLIC valkey_module)
finalize_test_flags(module_type_test)

set(SRCS_MODULE_TEST ${CMAKE_CURRENT_LIST_DIR}/module_test.cc)
add_executable(module_test ${SRCS_MODULE_TEST})
target_include_directories(module_test PUBLIC ${CMAKE_CURRENT_LIST_DIR})
target_link_libraries(module_test PUBLIC module)
target_link_libraries(module_type_test PUBLIC module_type)
target_link_libraries(module_test PUBLIC utils)
target_link_libraries(module_test PUBLIC valkey_module)
target_link_libraries(module_test PUBLIC memory_allocation)
finalize_test_flags(module_test)


set(SRCS_THREAD_POOL_TEST ${CMAKE_CURRENT_LIST_DIR}/thread_pool_test.cc)
add_executable(thread_pool_test ${SRCS_THREAD_POOL_TEST})
target_include_directories(thread_pool_test PUBLIC ${CMAKE_CURRENT_LIST_DIR})
target_link_libraries(thread_pool_test PUBLIC thread_pool)
target_link_libraries(thread_pool_test PUBLIC utils)
target_link_libraries(thread_pool_test PUBLIC log)
finalize_test_flags(thread_pool_test)

set(SRCS_TIME_SLICED_MRMW_MUTEX_TEST
    ${CMAKE_CURRENT_LIST_DIR}/mrmw_mutex_test.cc)
add_executable(time_sliced_mrmw_mutex_test ${SRCS_TIME_SLICED_MRMW_MUTEX_TEST})
target_include_directories(time_sliced_mrmw_mutex_test
                           PUBLIC ${CMAKE_CURRENT_LIST_DIR})
target_link_libraries(time_sliced_mrmw_mutex_test PUBLIC thread_pool)
target_link_libraries(time_sliced_mrmw_mutex_test PUBLIC time_sliced_mrmw_mutex)
target_link_libraries(time_sliced_mrmw_mutex_test PUBLIC utils)
finalize_test_flags(time_sliced_mrmw_mutex_test)

set(SRCS_STATUS_MACROS_TEST ${CMAKE_CURRENT_LIST_DIR}/status_macros_test.cc)
add_executable(status_macros_test ${SRCS_STATUS_MACROS_TEST})
target_include_directories(status_macros_test PUBLIC ${CMAKE_CURRENT_LIST_DIR})
target_link_libraries(status_macros_test PUBLIC status_macros)
finalize_test_flags(status_macros_test)

set(SRCS_MEMORY_ALLOCATION_TEST
    ${CMAKE_CURRENT_LIST_DIR}/memory_allocation_test.cc)
add_executable(memory_allocation_test ${SRCS_MEMORY_ALLOCATION_TEST})
target_include_directories(memory_allocation_test
                           PUBLIC ${CMAKE_CURRENT_LIST_DIR})
target_link_libraries(memory_allocation_test PUBLIC memory_allocation)
target_link_libraries(memory_allocation_test PUBLIC memory_allocation_overrides)
target_link_libraries(memory_allocation_test PUBLIC module)
target_link_libraries(memory_allocation_test PUBLIC utils)
finalize_test_flags(memory_allocation_test)

set(SRCS_UTILS_TEST ${CMAKE_CURRENT_LIST_DIR}/utils_test.cc)
add_executable(utils_test ${SRCS_UTILS_TEST})
target_include_directories(utils_test PUBLIC ${CMAKE_CURRENT_LIST_DIR})
target_link_libraries(utils_test PUBLIC thread_pool)
target_link_libraries(utils_test PUBLIC utils)
target_link_libraries(utils_test PUBLIC module)
target_link_libraries(utils_test PUBLIC utils)
target_link_libraries(utils_test PUBLIC valkey_module)
finalize_test_flags(utils_test)

set(SRCS_LOG_TEST ${CMAKE_CURRENT_LIST_DIR}/log_test.cc)
add_executable(log_test ${SRCS_LOG_TEST})
target_include_directories(log_test PUBLIC ${CMAKE_CURRENT_LIST_DIR})
target_link_libraries(log_test PUBLIC log)
target_link_libraries(log_test PUBLIC thread_pool)
target_link_libraries(log_test PUBLIC module)
target_link_libraries(log_test PUBLIC utils)
target_link_libraries(log_test PUBLIC valkey_module)
finalize_test_flags(log_test)
